@@ -8,6 +8,7 @@ import com.github.tobi.laa.reflective.fluent.builders.props.api.BuildersProperti
 import com.github.tobi.laa.reflective.fluent.builders.service.api.SetterService;
 import com.github.tobi.laa.reflective.fluent.builders.service.api.VisibilityService;
 import com.github.tobi.laa.reflective.fluent.builders.test.models.complex.ClassWithCollections;
+import com.github.tobi.laa.reflective.fluent.builders.test.models.nested.TopLevelClass;
 import com.github.tobi.laa.reflective.fluent.builders.test.models.simple.SimpleClass;
 import com.github.tobi.laa.reflective.fluent.builders.test.models.simple.SimpleClassNoDefaultConstructor;
 import com.github.tobi.laa.reflective.fluent.builders.test.models.simple.SimpleClassNoSetPrefix;
@@ -64,12 +65,13 @@ class BuilderMetadataServiceImplTest {
     @ParameterizedTest
     @MethodSource
     void testCollectBuilderMetadata(final String builderPackage, final String builderSuffix,
-                                    final Visibility constructorVisibility, final SortedSet<Setter> setters,
-                                    final Class<?> clazz, final BuilderMetadata expected) {
+                                    final Visibility constructorVisibility, final Visibility paramTypeVisibility,
+                                    final SortedSet<Setter> setters, final Class<?> clazz,
+                                    final BuilderMetadata expected) {
         // Arrange
         when(properties.getBuilderPackage()).thenReturn(builderPackage);
         when(properties.getBuilderSuffix()).thenReturn(builderSuffix);
-        when(visibilityService.toVisibility(anyInt())).thenReturn(constructorVisibility);
+        when(visibilityService.toVisibility(anyInt())).thenReturn(constructorVisibility, paramTypeVisibility);
         when(setterService.gatherAllSetters(clazz)).thenReturn(setters);
         // Act
         final BuilderMetadata actual = builderService.collectBuilderMetadata(clazz);
@@ -89,6 +91,7 @@ class BuilderMetadataServiceImplTest {
                         "<PACKAGE_NAME>", //
                         "Builder", //
                         Visibility.PACKAGE_PRIVATE, //
+                        Visibility.PUBLIC, //
                         ImmutableSortedSet.of(privateSetter, packagePrivateSetter, protectedSetter, publicSetter, setterNameCollision1, setterNameCollision2), //
                         SimpleClass.class, //
                         BuilderMetadata.builder() //
@@ -108,6 +111,7 @@ class BuilderMetadataServiceImplTest {
                         "<PACKAGE_NAME>.builder", //
                         "", //
                         Visibility.PACKAGE_PRIVATE, //
+                        Visibility.PUBLIC, //
                         ImmutableSortedSet.of(privateSetter, packagePrivateSetter, protectedSetter, publicSetter), //
                         ClassWithCollections.class, //
                         BuilderMetadata.builder() //
@@ -124,6 +128,7 @@ class BuilderMetadataServiceImplTest {
                         "the.builder.package", //
                         "MyBuilderSuffix", //
                         Visibility.PUBLIC, //
+                        Visibility.PUBLIC, //
                         ImmutableSortedSet.of(privateSetter, protectedSetter), //
                         SimpleClassNoSetPrefix.class, //
                         BuilderMetadata.builder() //
@@ -138,6 +143,7 @@ class BuilderMetadataServiceImplTest {
                 Arguments.of( //
                         "builders.<PACKAGE_NAME>", //
                         "Builder", //
+                        Visibility.PUBLIC, //
                         Visibility.PUBLIC, //
                         Collections.emptySortedSet(), //
                         SimpleClassNoDefaultConstructor.class, //
@@ -195,7 +201,12 @@ class BuilderMetadataServiceImplTest {
                         "<PACKAGE_NAME>.builder", //
                         Visibility.PACKAGE_PRIVATE, //
                         Set.of(SimpleClass.class),
-                        Collections.emptySet()));
+                        Collections.emptySet()),
+                Arguments.of( //
+                        "<PACKAGE_NAME>", //
+                        Visibility.PUBLIC, //
+                        Set.of(TopLevelClass.NestedPublicLevelOne.class, TopLevelClass.NestedNonStatic.class),
+                        Set.of(TopLevelClass.NestedPublicLevelOne.class)));
     }
 
     @Test
